--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <mata name = "viewport" content = "width=device-width, initial-scale=1, shrink-to-fit=no"></mata>
-    <title>Hello 2022</title>
+    <title>My Project</title>
     <link rel = "stylesheet" type = "text/css" href = "{% static 'bootstrap.min.css' %}">
     <link rel = "stylesheet" type = "text/css" href = "{% static 'style.css' %}">
 </head>
